# RoomsCalendar

./: .gitignore  LICENSE  README.md  RoomsCalendarAssets 8.5x11_PR.pxd  RoomsCalendarAssets 8.5x11_SR.pxd  RoomsCalendarAssets.pxd  grapefruit.py  main.py  manage.py  newmain.py  oldmain.py  pyproject.toml  requirements.txt  solution_summary.md  start_django_server.sh  test_main.py
.nova/: Configuration.json
calendar_generator/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
calendar_generator/management/commands/: README.md  check_migrations.py  create_holiday_range.py  populate_holidays.py
calendar_generator/migrations/: 0001_initial.py  0002_holiday_end_date.py  0003_artworkoverlay_holiday_artwork.py
roomscalendar/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/calendar_generator/: home.html  success.html
